# lox-lang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  lox.code-workspace  todo
cmake/: lox-config.cmake  lox-enable-ccache.cmake  lox-export.cmake  lox-install-config.cmake.in  lox-options.cmake  lox-prelude.cmake  lox-tools.cmake
cmake/presets/: ci.json  common.json  flags.json
code/: main.cpp
code/include/lox/: constants.hpp  context.hpp  error_handler.hpp  id.hpp  lexeme_database.hpp  literal.hpp  parser.hpp  program.hpp  scanner.hpp  token.hpp  types.hpp
code/include/lox/execution/: environment.hpp  interpreter.hpp  syntax_tree_interpreter.hpp
code/include/lox/types/: context.hpp  function.hpp  literal.hpp  native_functions.hpp  token.hpp
code/include/lox/utils/: ast_printer.hpp  compile_time.hpp  exit_codes.hpp  rpn_printer.hpp  strhash.hpp  strutils.hpp  vecutils.hpp
code/lox/: error_handler.cpp  error_handler.hpp  expression.cpp  expression.hpp  literal.cpp  literal.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp  utils.hpp
code/lox/execution/: syntax_tree_interpreter.cpp  syntax_tree_interpreter.hpp
code/lox/utils/: ast_printer.cpp  ast_printer.hpp  rpn_printer.cpp  rpn_printer.hpp  strhash.hpp
code/sources/lox/: error_handler.cpp  lexeme_database.cpp  literal.cpp  parser.cpp  scanner.cpp  token.cpp
code/sources/lox/execution/: environment.cpp  interpreter.cpp  syntax_tree_interpreter.cpp
code/sources/lox/types/: literal.cpp  native_functions.cpp  token.cpp
code/sources/lox/utils/: ast_printer.cpp  rpn_printer.cpp  strutils.cpp
examples/: CMakeLists.txt  main.cpp
interpreter/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
tools/: scheme
tools/codegen/: configuratoin.py  constants.py  generate_ast.py  generate_program_class.py  generation_info.json  utils.py
